# ridgeback_robot

ridgeback_base/: CHANGELOG.rst  CMakeLists.txt  package.xml
ridgeback_base/config/: diagnostic_analyzers.yaml
ridgeback_base/env-hooks/: 50.ridgeback_find_mag_config.sh
ridgeback_base/include/ridgeback_base/: passive_joint_publisher.h  ridgeback_cooling.h  ridgeback_diagnostic_updater.h  ridgeback_hardware.h  ridgeback_lighting.h  ridgeback_passive_joint.h
ridgeback_base/launch/: base.launch
ridgeback_base/src/: ridgeback_base.cpp  ridgeback_cooling.cpp  ridgeback_diagnostic_updater.cpp  ridgeback_hardware.cpp  ridgeback_lighting.cpp  simple_joy_node.cpp
ridgeback_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
ridgeback_bringup/config/: microstrain.yaml
ridgeback_bringup/launch/: accessories.launch
ridgeback_bringup/scripts/: can-udp-bridge.sh  install  navsat_rtk_relay
ridgeback_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
