<?xml version="1.0"?>
<package>
  <name>ridgeback_bringup</name>
  <version>0.1.1</version>
  <description>Scripts for installing Ridgeback's robot software.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/Robots/Ridgeback</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>ridgeback_base</run_depend>
  <run_depend>lms1xx</run_depend>
  <run_depend version_gte="0.1.1">robot_upstart</run_depend>

  <export>
  </export>
</package>
